wekan/wekan-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wekan
  name: wekan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wekan
  template:
    metadata:
      labels:
        app: wekan
    spec:
      containers:
      - env:
        - name: BIGEVENTS_PATTERN
          value: NONE
        - name: BROWSER_POLICY_ENABLED
          value: "true"
        - name: CARD_OPENED_WEBHOOK_ENABLED
          value: "false"
        - name: MAIL_FROM
          value: Wekan Notifications <noreply.wekan@mydomain.com>
        - name: MAIL_URL
          value: smtp://smtp.sendgrid.net:25/?ignoreTLS=true&tls={rejectUnauthorized:false}
        - name: MONGO_URL
          value: mongodb://wekan-db:27017/wekan
        - name: RICHER_CARD_COMMENT_EDITOR
          value: "false"
        - name: ROOT_URL
          value: http://wekan.lan
        - name: SCROLLAMOUNT
          value: auto
        - name: SCROLLINERTIA
          value: "0"
        - name: WITH_API
          value: "true"
        image: wekanteam/wekan
        imagePullPolicy: Always
        name: wekan
        ports:
        - containerPort: 8080
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wekan-db
  name: wekan-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wekan-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wekan-db
    spec:
      containers:
        - args:
            - mongod
            - --oplogSize
            - "128"
          image: mongo:latest
          imagePullPolicy: Always
          name: wekan-db
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: wekan-db
            - mountPath: /dump
              name: wekan-db-dump
      volumes:
        - name: wekan-db
          persistentVolumeClaim:
            claimName: wekan-db
        - name: wekan-db-dump
          persistentVolumeClaim:
            claimName: wekan-db-dump
