wekan/wekan-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wekan
  name: wekan
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: wekan
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wekan-db
  name: wekan-db
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: wekan-db
