wekan/wekan-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wekan-tier
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          wekan-tier: "true"
  podSelector:
    matchLabels:
      wekan-tier: "true"
